syntax = "proto3";

package oneof;

option go_package = "github.com/bbengfort/oneof/pb";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

service Streamer {
    rpc Onef(stream OnefMessage) returns (Done) {}
    rpc Anyf(stream AnyfMessage) returns (Done) {}
    rpc Enum(stream EnumMessage) returns (Done) {}
}

message Init {
    string client_id = 1;
    string region = 2;
}

message Data {
    string id = 1;
    bytes data = 2;
}

message Ack {
    string id = 1;
    google.protobuf.Timestamp ts = 2;
}

message Nack {
    string id = 1;
    uint32 code = 2;
    string error = 3;
}

message Done {
    string server_id = 1;
    int64 total_bytes = 2;
    int64 acks = 3;
    int64 nacks = 4;
    int64 messages = 5;
}

message OnefMessage {
    oneof embed {
        Init init = 1;
        Data data = 2;
        Ack ack = 3;
        Nack nack = 4;
    }
}

message AnyfMessage {
    google.protobuf.Any embed = 1;
}

message EnumMessage {
    enum MType {
        UNKNOWN = 0;
        INIT = 1;
        DATA = 2;
        ACK = 3;
        NACK = 4;
    }

    MType mtype = 1;
    bytes embed = 2;
}